# hyperliquid-triangular-arbitrage-bot

./: # OPS_COMMANDS – HL.md  .gitignore  2 PROMPT DEFINITIVO PER CURSOR.md  DECISIONS.md  INITIAL_CURSOR_PROMPT.md  PROTOCOL.md  README.md  ROADMAP.md  app.py  checkpoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
config/: config.example.yaml
exports/universe_snapshots/: universe_24h_20260201_184424_report.json  universe_24h_20260201_190019_report.json  universe_24h_20260201_190325_report.json  universe_24h_20260201_190522_report.json
sessions/: SESSION_20251229_220325.json  SESSION_20260201_141118.json  SESSION_20260201_144236.json  SESSION_20260201_145652.json  SESSION_20260201_184532.json  SESSION_20260201_190045.json
src/: cli.py
src/arb/: market_graph.py  paper_trader.py  triangular_scanner.py
src/cli/: __init__.py  run_paper_bot.py  run_spot_perp_paper.py
src/collector/: __init__.py  universe_export.py  universe_raw_collector.py
src/config/: loader.py  models.py  snapshot.py
src/db/: models.py  runtime_status.py  session.py
src/hyperliquid_client/: client.py
src/observability/: feed_health.py
tests/: test_feed_health.py  test_hyperliquid_client_spot_coin.py  test_spot_perp_auto_assets.py  test_spot_perp_decision_trace.py
tools/: find_true_spot_perp_matches.py  scan_ws_valid_spot_pairs.py  ws_l2book_purr_symbol_test.py  ws_mid_compare_bera.py  ws_mid_compare_hype.py  ws_mid_compare_purr.py  ws_mid_compare_stable.py  ws_spot_l2book_test.py
web-dashboard/: README.md  package.json
(+8 files in other folders)
